@JayCesar | Update: Feat: Add new  aspects

--- a/src/index.css
+++ b/src/index.css
@@ -5,10 +5,9 @@
 .btn {
   background: linear-gradient(
     92.23deg,
-    #ff56f6 21.43%,
-    #b936ee 50.63%,
-    #3bace2 100%,
-    #406aff 117.04%
+    #F84D05 20.43%,
+    #F8CA09 120.63%,
+    #F94104 200.04%
   );
   box-shadow: 0px 4.42184px 107.23px rgba(255, 86, 246, 0.51);
 }
@@ -16,9 +15,9 @@
 .btn:hover {
   background: linear-gradient(
     92.23deg,
-    #406aff 21.43%,
-    #3bace2 50.63%,
-    #b936ee 100%,
+    #F8CA09 21.43%,
+    #F84D05 50.63%,
+    #F94104 100%,
     #ff56f6 117.04%
   );
 }
@@ -27,9 +26,9 @@
 .active {
   background: linear-gradient(
     92.23deg,
-    #406aff 21.43%,
-    #3bace2 50.63%,
-    #b936ee 100%,
+    #F8CA09 21.43%,
+    #F84D05 50.63%,
+    #F94104 100%,
     #ff56f6 117.04%
   );
 }
@@ -38,6 +37,25 @@
   color: #fff;
   padding: 1rem;
   border-radius: 100%;
+}
+
+@media screen and (min-width: 320px) and (max-width: 599px) {
+  #services{
+    margin-top: 400px;
+  }
+}
+
+@media screen and (min-width: 600px) and (max-width: 959px) {
+  #services{
+    margin-top: 40rem;
+  }
+}
+
+
+@media screen and (min-width: 960px){
+  #imgJulio{
+      margin-bottom: -80px;
+  }
 }
 
 @layer base {
@@ -63,7 +81,7 @@
     @apply text-base;
   }
   .text-gradient {
-    @apply bg-gradient-to-r text-transparent bg-clip-text from-[#42A6E3] to-[#FF56F6] font-bold font-primary hover:from-[#FF56F6] hover:to-[#42A6E3];
+    @apply bg-gradient-to-r text-transparent bg-clip-text from-[#F8CA09] to-[#F84D05] font-bold font-primary hover:from-[#F84D05] hover:to-[#F8CA09];
   }
   .section {
     @apply py-8 lg:py-24 lg:h-screen flex items-center;
